# custom-paddleocr

./: main.py  pyproject.toml
examples/: inference_onnx_mobile.py  inference_onnx_server.py
results/ocr/: inference_onnx_mobile.json  inference_onnx_server.json
src/ocr_engine/: __init__.py
src/ocr_engine/engines/: onnx.py  paddle.py
src/ocr_engine/utils/: geometry.py  postprocess.py  visualization.py
