[project]
name = "custom-paddleocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "onnxruntime>=1.24.4",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pyclipper>=1.4.0",
    "shapely>=2.1.2",
]
